--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ repositories {
 }
 
 dependencies {
+    compile files('libs/gson-2.6.2.jar')
     compile files('libs/roundedimageview-2.2.1-sources.jar')
     compile 'com.jakewharton:butterknife:7.0.1'
     compile files('libs/lite-common-1.1.3.jar')
