--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,6 @@ repositories {
 
 dependencies {
     compile files('libs/gson-2.6.2.jar')
-    compile files('libs/roundedimageview-2.2.1-sources.jar')
     compile 'com.jakewharton:butterknife:7.0.1'
     compile files('libs/lite-common-1.1.3.jar')
     compile files('libs/lite-http-2.3.1.jar')
@@ -34,6 +33,25 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile project(':ViewPagerIndicator')
 }
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    compile 'com.makeramen:roundedimageview:2.2.1'
+}
+
+repositories {
+    mavenCentral()
+    mavenLocal()
+}
+
+dependencies {
+    compile 'com.github.markushi:circlebutton:1.1'
+}
+
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
