--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".view.activity.TextActivity">
 
         </activity>
+        <activity android:name=".view.activity.ShowWantActivity" />
 
     </application>
 
